--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ section{
 .formContainer{
     max-width: 230px;
     background-color: #FFFFFFBB;
+    border-radius: 20px;
     padding: 20px;
     float: right;
 }
@@ -101,4 +102,18 @@ footer{
 
 .description h3{
     font-size: 24px;
+}
+
+@media screen and (max-width: 500px) {
+    .formContainer{
+        background-color: #ffffff3e;
+        border-radius: 20px;
+        color: white;
+    }
+
+    section{
+        background-color: aquamarine;
+        display: flex;
+        justify-content: center;
+    }
 }
